--- a/codemon.html
+++ b/codemon.html
@@ -92,6 +92,7 @@ var data =[[0,0,0,0,0,0,0,0,0,0],
           [0,0,0,0,0,0,0,0,0,0],
           [0,0,0,0,0,0,0,0,0,0],
           [0,0,0,0,0,0,0,0,0,0]];
+      //datata
 document.getElementById("aa").style.color = "#126ae6";
 function Select(i, j){
   if ((row != -1 && column != -1) )
